Combo changes - fixing the growth / Mantra page, icon spacing in vertical footer
To be done - clean up about page

--- a/src/component/AboutPage/GrowthMantra/style.css
+++ b/src/component/AboutPage/GrowthMantra/style.css
@@ -2,96 +2,88 @@ a {
     text-decoration: none;
     color: #ffffff;
     z-index: 1;
-  }
-  .background-white {
+}
+
+.background-white {
     background-color: white;
     z-index: -10;
-  }
-
-.growthMantraContainer{
-  width: 130%;
 }
-  .Growth-text {
-    width: 1103px;
-    height: 444px;
-    z-index: 1;
-    left: 110px;
-    margin-top: -51px;
-    /* top: -51px; */
 
+.background-fit-content {
+    width: fit-content;
+}
+
+.growthMantraContainer {
+    width: 155vw;
+    margin-right: 12vw;
+}
+
+.Growth-text {
+    width: 1103px;
+    z-index: 1;
+    margin-bottom: 0px;
+    /* top: -51px; */
     font-family: 'Space Mono 700';
     font-style: normal;
     /* font-weight: 700; */
-    font-size: 200px;
-    line-height: 340px;
+    font-size: max(30vh, 300px);
+    line-height: 80%;
     text-transform: uppercase;
-
     /* OPRATN Green */
-
     color: #6FCF97;
-  }
+}
 
-  .IsOurText {
-    width: 338px;
-    height: 92px;
+.IsOurText {
+    width: 40vw;
     left: 124px;
-    margin-top: -230px;
     z-index: 1;
     /* top: 288px; */
     -webkit-text-fill-color: transparent;
-    -webkit-text-stroke-width: 1.5px;
+    -webkit-text-stroke-width: max(0.2vh, 1.5px);
     /* H1 */
-
     font-family: 'Space Mono 700';
     font-style: normal;
     font-weight: 700;
-    font-size: 70px;
+    font-size: max(9vh, 92px);
+    line-height: 95%;
+    margin-bottom: 0px;
     text-transform: uppercase;
+}
 
-  }
-
-  .MantraText {
-    width: 735px;
-    height: 296px;
+.MantraText {
+    width: 50vw;
+    height: auto;
     left: 126px;
-    top: 302px;
-    margin-top: -100px;
     z-index: 1;
-
+    margin-top: -40px;
     font-family: 'Space Mono 700';
     font-style: normal;
     /* font-weight: 700; */
-    font-size: 150px;
-    line-height: 260px;
+    font-size: max(20vh, 200px);
+    margin-bottom: 0px;
+    line-height: 90%;
     text-transform: uppercase;
-
     /* Black */
-
     color: #111111;
-  }
+}
 
-  .paragraphTextGrowthMantra {
+.paragraphTextGrowthMantra {
     width: 300px;
-    height: 238px;
+    height: 40vh;
     z-index: 1;
     /* margin-left: 10px; */
-    top: 567px;
-    margin-top: -60px;
     /* B1 */
-
     font-family: 'Outfit 300';
     font-style: normal;
     /* font-weight: 300; */
     font-size: 18px;
     line-height: 141.667%;
     /* or 142% */
-
-
     /* Black */
-
     color: black;
-  }
-  .paragraphTextGrowthMantraTwo {
+}
+
+.paragraphTextGrowthMantraTwo {
     width: 300px;
     height: 238px;
     margin-left: 60px;
@@ -99,26 +91,36 @@ a {
     margin-top: -60px;
     z-index: 1;
     /* B1 */
-
     font-family: 'Outfit 300';
     font-style: normal;
     /* font-weight: 300; */
     font-size: 18px;
     line-height: 141.667%;
     /* or 142% */
-
-
     /* Black */
-
     color: black;
-  }
+}
 
-  .carrot{
+.carrot {
     margin-left: 20px;
     z-index: 1;
-  }
+}
 
-  .paragraphTextTwo {
+.mantraParagraphText {
+    width: 30vw;
+    height: 30vh;
+    margin-right: 3vw;
+    text-align: left;
+    font-family: 'Outfit 300';
+    font-size: max(1vw + 1vh, 24px);
+    font-style: normal;
+    font-weight: 300;
+    line-height: 140%;
+    color: #111111;
+    z-index: 3;
+}
+
+.paragraphTextTwo {
     width: 415px;
     height: 400px;
     margin-left: 30px;
@@ -127,8 +129,7 @@ a {
     text-align: right;
     margin-right: -50px;
     /* B1 */
-
-    font-family: 'Outfit 300';    
+    font-family: 'Outfit 300';
     font-style: normal;
     /* font-weight: 300; */
     font-size: 18px;
@@ -136,9 +137,9 @@ a {
     /* or 142% */
     color: #111111;
     z-index: 1;
-  }
+}
 
-  .growthMantrainterestedText {
+.growthMantrainterestedText {
     font-family: 'Space Mono 700';
     font-style: normal;
     font-size: 5rem;
@@ -146,25 +147,41 @@ a {
     color: black;
     margin-top: 12%;
     z-index: 1;
-  }
+}
 
-  .mantra{
+.mantra {
     display: flex;
     flex-direction: column;
+    padding-top: 12vh;
     width: 60%;
     z-index: 1;
-  }
+}
 
-  .alignItemsRight {
+.alignItemsRightMantra {
     display: flex;
     flex-direction: row;
+    margin-right: 0;
+    margin-top: 0px;
+    align-items: flex-start;
     padding-left: 5%;
     padding-right: 5%;
     color: #000000;
     z-index: 1;
-  }
+}
 
-  .applyNowBoxGrowthMantra {
+.textAlignItemsRight {
+    padding-top: 5vh;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding-left: 5%;
+    padding-right: 5%;
+    color: #000000;
+    z-index: 1;
+}
+
+.applyNowBoxGrowthMantra {
     display: inline-block;
     width: 200px;
     height: 50px;
@@ -175,9 +192,9 @@ a {
     /* Black */
     border: 1px solid #111111;
     z-index: 15;
-  }
+}
 
-  .blackRectangle {
+.blackRectangle {
     display: inline-block;
     width: 200px;
     height: 50px;
@@ -185,9 +202,9 @@ a {
     background: black;
     border: 1px solid #111111;
     z-index: 1;
-  }
+}
 
-  .applyNowText {
+.applyNowText {
     width: 134.68px;
     height: 36.4px;
     margin-left: 25px;
@@ -197,21 +214,18 @@ a {
     font-size: 24px;
     line-height: 36px;
     text-align: center;
-
     /* White */
-
     color: #FFFFFF;
     z-index: 15;
-  }
+}
 
-  .paragraphTextThree {
+.paragraphTextThree {
     width: 350px;
     height: 238px;
     margin-left: 20px;
     /* top: 567px; */
     margin-top: -40px;
     /* B1 */
-
     font-family: 'Outfit 300';
     font-style: normal;
     font-weight: 300;
@@ -224,55 +238,61 @@ a {
     /* top: 567px; */
     padding-top: 2%;
     z-index: 1;
-  }
+}
 
-  .cooltriangle {
+.cooltriangle {
     margin-left: -40px;
     margin-top: 120px;
-    z-index: 1;
-  }
+    z-index: 3;
+}
 
-  .leftcarrot {
+.leftcarrot {
     margin-left: 100px;
     margin-right: -100px;
+    z-index: 2;
+}
+
+.mountain-image {
     z-index: 1;
-  }
+    position: absolute;
+    top: 0px;
+    height: 100vh;
+    background-color: #6FCF97;
+}
 
-  .mountain-image{
-    text-align: center;
-    z-index: 10;
-    width: auto;
-    height: auto;
-    margin-top: auto;
-    margin-bottom: auto;
-    transform: scale(2.5);
-    transform: translate(20%, -55%);
-    /* position: fixed; */
-    /* background-position: bottom; */
-  }
+.mtn-image {
+    position: absolute;
+    top: 0%;
+    right: 100%;
+    background-color: #6FCF97;
+}
 
-  .m-img{
-    width:100;
-    height:300%;
-    z-index: 20;
-  }
+.m-img {
+    height: 45vh;
+    z-index: 1;
+    position: relative;
+    left: -16vw;
+}
 
-  @media only screen and (max-device-height: 1000px) {
-    .mountain-image{
-      text-align: center;
-      z-index: 10;
-      width: auto;
-      height: auto;
-      margin-top: auto;
-      margin-bottom: auto;
-      transform: scale(1.2);
-      transform: translate(33%, -100%);
-      /* position: fixed; */
-      /* background-position: bottom; */
-    }
 
-    @media only screen and (max-device-height: 800px) {
-      .mountain-image{
+/* @media only screen and (max-device-height: 1000px) {
+    .m-img {
+        transform: scale(1.2);
+        width: 40vw;
+        height: 40vh;
+        z-index: 20;
+        z-index: 20;
+        /* position: fixed; */
+
+
+/* background-position: bottom; */
+
+
+/*
+
+}
+@media only screen and (max-device-height: 800px) {
+    .m-img {
         text-align: center;
         z-index: 10;
         width: auto;
@@ -282,12 +302,12 @@ a {
         transform: scale(1.2);
         transform: translate(24%, -80%);
         /* position: fixed; */
-        /* background-position: bottom; */
-      }
+
+
+/* background-position: bottom; */
+
+
+/*
     }
-
-  }
-
-  
-
-  
+}
+*/
